--- a/SaafiLogistics/Views/Home/Index.cshtml
+++ b/SaafiLogistics/Views/Home/Index.cshtml
@@ -1,10 +1,12 @@
 ﻿@{
     ViewBag.Title = "Home";
 }
-<p>View jobs by:</p>
+<p>Process Loads by:</p>
 <ul>
-    @foreach (KeyValuePair<string, string> action in ViewBag.actions)
+    @foreach (KeyValuePair<string, string> type in ViewBag.type)
     {
-        <li><a href="/@action.Key">@action.Value</a></li>
+        <li><a asp-controller="Process" >@type.Value</a></li>
+        
+        
     }
 </ul>
