--- a/SaafiLogistics/Views/Search/Index.cshtml
+++ b/SaafiLogistics/Views/Search/Index.cshtml
@@ -1,5 +1,7 @@
-﻿<h1>@ViewBag.title</h1>
-<form action="/Search/Results">
+﻿
+<h1>@ViewBag.title</h1>
+
+<form method = "post">
     <h2>Search by:</h2>
 
     <p>
@@ -25,18 +27,19 @@
 </form>
 
 <hr />
-@if (ViewBag.jobs != null)
+
+@if (ViewBag.loads != null)
 {
 
-    <h3>@ViewBag.jobs.Count Result(s)</h3>
-    <table>
+    <h3>@ViewBag.loads.Count Result(s)</h3>
+    <table class="table table-striped">
 
-        @foreach (Dictionary<string, string> job in ViewBag.jobs)
+        @foreach (Dictionary<string, string> load in ViewBag.loads)
         {
-            @foreach (KeyValuePair<string, string> item in job)
+            @foreach (KeyValuePair<string, string> item in load)
             {
-                <tr>
-                    <td><a asp-controller="Search" asp-action="Results" asp-route-column="@item.Key" asp-route-value="@item.Value">@item.Key @item.Value</a></td>
+                <tr class="table table-striped">
+                    <td><a asp-controller="Search" asp-action="Load" asp-route-column="@item.Key" asp-route-value="@item.Value">@item.Key @item.Value</a></td>
                 </tr>
             }
         }
