--- a/SaafiLogistics/Views/Shared/Results.cshtml
+++ b/SaafiLogistics/Views/Shared/Results.cshtml
@@ -1,7 +1,5 @@
-﻿
-<h1>@ViewBag.title</h1>
-
-<form action="/Search/Results">
+﻿<h1>@ViewBag.title</h1>
+<form method="post">
     <h2>Search by:</h2>
 
     <p>
@@ -26,20 +24,18 @@
     <input type="submit" value="Search" />
 </form>
 
-<hr />
-
-@if (ViewBag.jobs != null)
+@if (ViewBag.loads != null)
 {
 
-    <h3>@ViewBag.jobs.Count Result(s)</h3>
-    <table>
+    <h3>@ViewBag.loads.Count Result(s)</h3>
+    <table class="table table-striped">
 
-        @foreach (Dictionary<string, string> job in ViewBag.jobs)
+        @foreach (Dictionary<string, string> load in ViewBag.loads)
         {
-            @foreach (KeyValuePair<string, string> item in job)
+            @foreach (KeyValuePair<string, string> item in load)
             {
-                <tr>
-                    <td><a asp-controller="Search" asp-action="Jobs" asp-route-column="@item.Key" asp-route-value="@item.Value">@item.Key @item.Value</a></td>
+                <tr class="table">
+                    <td class="tab-content"><a asp-controller="Search" asp-action="Results" asp-route-column="@item.Key" asp-route-value="@item.Value">@item.Key @item.Value</a></td>
                 </tr>
             }
         }
