--- a/SaafiLogistics/Views/Shared/_Layout.cshtml
+++ b/SaafiLogistics/Views/Shared/_Layout.cshtml
@@ -22,15 +22,16 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">SaafiLogistics</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Saafi</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-controller="Search" asp-action="Index">Search</a></li>
                     <li><a asp-controller="List" asp-action="Index">List</a></li>
-                    <li><a asp-controller="Add" asp-action="Index">New Load</a></li>
+                    <li><a asp-controller="Load" asp-action="Add">New Load</a></li>
                     <li><a asp-controller="Remove" asp-action="Index">Remove</a></li>
                     <li><a asp-controller="Edit" asp-action="Index">Edit</a></li>
+                    <li><a asp-controller="User" asp-action="Add">Login<span class="glyphicon glyphicon-user"></span></a></li>
                    
                 </ul>
             </div>
