--- a/SaafiLogistics/Views/User/Index.cshtml
+++ b/SaafiLogistics/Views/User/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@model  List<SaafiLogistics.Models.User>
-<h1>ViewBag.title</h1>
+<h1>@{ViewBag.title = "List of Users";}</h1>
 
 @if (Model.Count == 0)
 {
@@ -30,4 +30,4 @@
     }
 </table>
 
-<p><a asp-controller="User" asp-action="Add">Add Cheese</a></p>
+<p><a asp-controller="User" asp-action="Add">Add Load</a></p>
