--- a/SaafiLogistics/Views/Home/Index.cshtml
+++ b/SaafiLogistics/Views/Home/Index.cshtml
@@ -1,18 +1,10 @@
 ﻿@{
     ViewBag.Title = "Home";
 }
-
-<div>
-    <br />
-
+<div class="jumbotron span12 pagination-centered" style="background:white">
 </div>
-<br />
-<div>
-    <br />
 
-</div>
-<br />
-<div class="span12 pagination-centered">
+<div class="jumbotron span12 pagination-centered" style="background:white">
 
 
     @*@foreach (KeyValuePair<string, string> type in ViewBag.type)
@@ -23,10 +15,107 @@
 
 
     }*@
-    <a asp-controller="Process" class="btn btn-primary btn-lg" role="button">Owner Operator</a>
-    <a asp-controller="Driver" class="btn btn-primary btn-lg" role="button">Company Driver</a>
-    <a asp-controller="Reports" asp-action="Generate" class="btn btn-primary btn-lg " role="button">Reports<span class="glyphicon glyphicon-list-alt"> </span></a><br />
-    <a asp-controller="Load" asp-action="Add" class="btn btn-primary btn-lg" role="button">Process Load</a>
-    <a asp-controller="Load" asp-action="Remove" class="btn btn-primary btn-lg" role="button">Remove Load<span class="glyphicon glyphicon-trash"> </span></a>
-    <a asp-controller="Load" asp-action="Edit" class="btn btn-primary btn-lg" role="button">Edit Load</a><br />
+    <ul>
+
+        
+        <li class="btn" style= "background-color: #FFF;
+    border: 1px solid #e8e8e8;
+    box-shadow: 0 0 5px #e8e8e8;
+    float: left;
+    border-bottom: 2px solid #e8e8e8;
+    color: #127fd8;
+    height: 100px;
+    padding-top: 35px;
+    font-weight: 600;
+    text-align: center;
+    color: #127fd8; margin-bottom: 10px;
+    margin-right: 10px;
+    width: 200px;
+ 
+    box-sizing: border-box; font-size: 14px;
+    line-height: 1.42857143;">
+        <a asp-controller="Process">Owner Operator</a></li>
+        <li class="btn" style= "background-color: #FFF;
+    border: 1px solid #e8e8e8;
+    box-shadow: 0 0 5px #e8e8e8;
+    float: left;
+    border-bottom: 2px solid #e8e8e8;
+    color: #127fd8;
+    height: 100px;
+   padding-top: 35px;
+    font-weight: 600;
+    text-align: center;
+    color: #127fd8; margin-bottom: 10px;
+    margin-right: 10px;
+    width: 200px;
+    box-sizing: border-box;"
+       role="button"> <a asp-controller="Driver">Company Driver</a></li>
+        <li class="btn" style= "background-color: #FFF;
+    border: 1px solid #e8e8e8;
+    box-shadow: 0 0 5px #e8e8e8;
+    float: left;
+    border-bottom: 2px solid #e8e8e8;
+    color: #127fd8;
+    height: 100px;
+    padding-top: 35px;
+    font-weight: 600;
+    text-align: center;
+    color: #127fd8; margin-bottom: 10px;
+    margin-right: 10px;
+    width: 200px;
+    box-sizing: border-box;"
+       role="button"><a asp-controller="Reports" asp-action="Generate">Reports<span class="glyphicon glyphicon-list-alt"> </span></a> </li>
+        <li class="btn" style= "background-color: #FFF;
+    border: 1px solid #e8e8e8;
+    box-shadow: 0 0 5px #e8e8e8;
+    float: left;
+    border-bottom: 2px solid #e8e8e8;
+    color: #127fd8;
+    height: 100px;
+    padding-top: 35px;
+    font-weight: 600;
+    text-align: center;
+    color: #127fd8; margin-bottom: 10px;
+    margin-right: 10px;
+    width: 200px;
+    box-sizing: border-box;"
+       role="button"> <a asp-controller="Load" asp-action="Add">Process Load</a></li>
+        <li class="btn" style= "background-color: #FFF;
+    border: 1px solid #e8e8e8;
+    box-shadow: 0 0 5px #e8e8e8;
+    float: left;
+    border-bottom: 2px solid #e8e8e8;
+    color: #127fd8;
+    height: 100px;
+    padding-top: 14px;
+    font-weight: 600;
+    text-align: center;
+    color: #127fd8; margin-bottom: 10px;
+    margin-right: 10px;
+    width: 200px;
+    box-sizing: border-box;"
+       role="button"> <a asp-controller="Load" asp-action="Remove">Remove Load<span class="glyphicon glyphicon-trash"> </span></a></li>
+        <li class="btn" style= "background-color: #FFF;
+    border: 1px solid #e8e8e8;
+    box-shadow: 0 0 5px #e8e8e8;
+    float: left;
+    border-bottom: 2px solid #e8e8e8;
+    color: #127fd8;
+    height: 100px;
+   padding-top: 35px;
+    font-weight: 600;
+    text-align: center;
+    color: #127fd8; margin-bottom: 10px;
+    margin-right: 10px;
+    width: 200px;
+    box-sizing: border-box;"
+       role="button"> <a asp-controller="Load" asp-action="Edit">Edit Load</a></li>
+        
+       
+        
+        
+        
+
+    </ul>
+    
 </div>
