--- a/SaafiLogistics/Views/List/Index.cshtml
+++ b/SaafiLogistics/Views/List/Index.cshtml
@@ -1,12 +1,56 @@
-﻿<h1>@ViewBag.Title</h1>
-<h2><button class="btn btn-info btn-block" role="button"> List Loads By: </button></h2>
+﻿@model SaafiLogistics.ViewModels.LoadFieldsViewModel
 
-    @foreach (KeyValuePair<string, string> column in ViewBag.columns)
+
+<h2></h2><br />
+
+   <div>
+    <button class="btn" style="background-color: #FFF;
+    border: 1px solid #e8e8e8;
+    box-shadow: 0 0 5px #e8e8e8;
+    float: left;
+    border-bottom: 2px solid #e8e8e8;
+    color: #127fd8;
+    height: 100px;
+    padding-top: 35px;
+    font-weight: 600;
+    text-align: center;
+    color: #127fd8; margin-bottom: 10px;
+    margin-right: 10px;
+    width: 200px;
+
+    box-sizing: border-box; font-size: 14px;
+    line-height: 1.42857143;">
+        List Loads By:
+    </button>
+
+
+</div>
+   <br /> 
+<div>
+    @foreach (var column in Model.Columns)
+
+
     {
-      
-            <a asp-controller="List" asp-action="Values" asp-route-column="@column.Key"  class="btn btn-info btn-lg" role="button">@column.Value</a>
-            
+
+        <a asp-controller="List" asp-action="Values" asp-route-column="@column" class="btn" style="background-color: #FFF;
+    border: 1px solid #e8e8e8;
+    box-shadow: 0 0 5px #e8e8e8;
+    float: left;
+    border-bottom: 2px solid #e8e8e8;
+    color: #127fd8;
+    height: 100px;
+    padding-top: 35px;
+    font-weight: 600;
+    text-align: center;
+    color: #127fd8; margin-bottom: 10px;
+    margin-right: 10px;
+    width: 200px;
+
+    box-sizing: border-box; font-size: 14px;
+    line-height: 1.42857143;">
+            @column
+        </a>
 
     }
+</div>
 
-<a asp-controller="List" asp-action="Loads" asp-route-column="all" class="btn btn-info btn-lg" role="button">All</a>
