--- a/SaafiLogistics/Views/Search/Index.cshtml
+++ b/SaafiLogistics/Views/Search/Index.cshtml
@@ -1,25 +1,26 @@
-﻿
-<h1>@ViewBag.title</h1>
+﻿@model SaafiLogistics.ViewModels.SearchLoadsViewModel
 
-<form method = "post">
 
+<form action="/Search/Results">
     <p>
-        @foreach (KeyValuePair<string, string> column in ViewBag.columns)
+        @foreach (var column in Model.Columns)
         {
+            var checkedColumn = column.Equals(Model.Column);
+
             <span>
                 <input type="radio"
-                       name="searchType"
-                       id="@column.Key"
-                       value="@column.Key"
-                       checked="@column.Key == 'all''" />
-                <label for="@column.Key">@column.Value</label>
+                       name="Column"
+                       id="@column"
+                       value="@column"
+                       checked="@checkedColumn" />
+                <label for="@column">@column</label>
             </span>
         }
     </p>
 
     <p>
-        <label for="searchTerm">Keyword:</label>
-        <input type="text" name="searchTerm" id="searchTerm" />
+        <label asp-for="Value"></label>
+        <input asp-for="Value" />
     </p>
 
     <input type="submit" value="Search" />
@@ -27,23 +28,39 @@
 
 <hr />
 
-@if (ViewBag.loads != null)
+@if (Model.Loads != null)
 {
 
-    <h3>@ViewBag.loads.Count Result(s)</h3>
+    <h3>@Model.Loads.Count Result(s)</h3>
     <table class="table table-striped">
-
-        @foreach (Dictionary<string, string> load in ViewBag.loads)
+        <tr>
+            <th>Date</th>
+            <th>Number</th>
+            <th>Description</th>
+            <th>Owner</th>
+            <th>Pay</th>
+            <th>Advance</th>
+            <th>Net</th>
+        </tr>
+        </table>
+        @foreach (var load in Model.Loads)
         {
-            @foreach (KeyValuePair<string, string> item in load)
-            {
-                <tr class="table table-striped">
-                    <td><a asp-controller="Search" asp-action="Load" asp-route-column="@item.Key" asp-route-value="@item.Value">@item.Key @item.Value</a></td>
+            <table class="table table-striped">
+                <tr>
+                   
+                    <td>@load.Date</td>
+                    <td>@load.Number</td>
+            
+                    <td>@load.Description</td>
+  
+                    <td>@load.Owner</td>
+
+                    <td>@load.Pay</td>
+
+                    <td>@load.Advance</td>
+   
+                    <td>@load.Net</td>
                 </tr>
-            }
+            </table>
         }
-
-    </table>
-
-    // TODO #2 - Loop over jobs dictionary and display all job fields
 }
